# SimpleBankingTask

./: README.md
CLI/Cpp/: CMakeLists.txt  commands.cpp  commands.hpp  controller.cpp  main.cpp  types.hpp
CLI/Cpp/lib/include/: utils.hpp
CLI/Cpp/lib/src/: utils.cpp
Cpp/: CMakeLists.txt  Dockerfile  README.md  entrypoint.sh
Cpp/cli/: main.cpp
Cpp/http/: client.cpp  server.cpp
Cpp/lib/include/: commands.hpp  controller.hpp  null_output.hpp  queries.hpp  types.hpp  utils.hpp
Cpp/lib/src/: commands.cpp  controller.cpp  queries.cpp  utils.cpp
Cpp/tcp/: client.cpp  server.cpp
Cpp/test/: test_main_requirements.cpp  test_process_login.cpp  testing_utils.cpp  testing_utils.hpp
Cpp/udp/: client.cpp  server.cpp
Python/: Dockerfile  Dockerfile.test  README.md  docker-compose.yml  simple_banking.py  test_functional_tcp.py  test_simple_banking.py
